updated server start script to avoid hardcoding version